--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -5,16 +5,17 @@
     height: 70vh;
 }
 .text-content {
+    width: 100%;
     padding: 0 5%;
     display: flex;
     flex-direction: column;
     position: absolute;
     top: 70px;
-    left: 32%;
     transform: translate(-50% -50%);
     color: #fff;
     border-radius: 20px;
     font-size: 2rem;
+    text-align: center;
 }
 .text-content:nth-child(2) {
     margin-bottom: 20%;
@@ -44,7 +45,7 @@
     border: none;
     cursor: pointer;
     position: absolute;
-    left: 47%;
+    left: 44%;
     bottom: 90px;
     transition: 0.5s ease;
 }
