--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,17 +25,17 @@
     font-family: 'Yatra One', cursive;
 }
 .logo-container img {
-    width: 25%;
+    width: 24%;
     margin-right: 10%;
 }
 .nav-container {
-    width: 27%;
+    width: 37%;
+    margin-left: -5%;
 }
 nav ul {
     display: flex;
     align-items: center;
     padding-right: 20%;
-    padding-left: 1%;
     justify-content: space-between;
     list-style-type: none;
 }
